--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Green Earth</title>
 </head>
 
@@ -36,7 +37,8 @@
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active mx-5">
-                                <a class="nav-link change text-white " href="#">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link change text-white " href="#">Home <span
+                                        class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item mx-5">
                                 <a class="nav-link change text-white " href="#">Sinup</a>
