chore: adicionar estrutura da seção sobre "quem somos" e estilo

--- a/index.html
+++ b/index.html
@@ -70,6 +70,96 @@
             </div>
         </div>
     </main>
+
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 about-content">
+                    <h2 class="text-center">Quem somos?</h2>
+                    <p class="text-center">
+                        Bem-vindo à Green Earth, uma organização não governamental (ONG) apaixonada pela preservação da
+                        Floresta Amazônica e
+                        comprometida em criar um impacto positivo no meio ambiente. Fundada em 2001, nossa
+                        jornada começou com um
+                        grupo de visionários ambientais dedicados a defender a beleza e a importância vital da maior
+                        floresta tropical do mundo.
+                    </p>
+
+                    <h3 class="text-center">Nossa Missão</h3>
+                    <p class="text-center">
+                        Na Green Earth, nossa missão é clara: proteger e preservar a Floresta Amazônica, promover a
+                        sustentabilidade e fomentar
+                        uma coexistência harmoniosa entre seres humanos e a natureza. Acreditamos que a floresta é um
+                        tesouro natural
+                        inestimável, essencial para a saúde do planeta e para o bem-estar das gerações presentes e
+                        futuras.
+                    </p>
+
+                    <h3 class="text-center">Nossos Valores</h3>
+                    <p class="text-center">
+                        Nossos valores fundamentais moldam cada passo que damos na luta pela preservação da Amazônia.
+                        Somos impulsionados por:
+
+                        Paixão pela Natureza: Amamos a natureza e acreditamos que sua beleza e biodiversidade devem ser
+                        preservadas para sempre.
+
+                        Compromisso com a Sustentabilidade: Buscamos a harmonia entre o desenvolvimento humano e a
+                        conservação do meio ambiente.
+
+                        Integridade e Transparência: Agimos com honestidade e transparência em todas as nossas ações e
+                        decisões.
+
+                        Inovação e Responsabilidade: Buscamos soluções criativas e inovadoras para enfrentar os desafios
+                        ambientais e nos
+                        responsabilizamos por nossas ações.
+                    </p>
+
+                    <h3 class="text-center">Nossos Projetos</h3>
+                    <p class="text-center">
+                        A Green Earth está na vanguarda da execução de projetos ambientais inovadores e impactantes.
+                        Através de programas de
+                        reflorestamento, conscientização ambiental, parcerias com comunidades locais e ações de lobby,
+                        estamos comprometidos em
+                        combater o desmatamento e promover a regeneração das áreas degradadas.
+                    </p>
+
+                    <h3 class="text-center">Nossos Parceiros</h3>
+                    <p class="text-center">
+                        Nossos esforços não seriam possíveis sem o apoio e a colaboração de nossos parceiros.
+                        Trabalhamos lado a lado com
+                        organizações internacionais, governos, empresas socialmente responsáveis, comunidades locais e
+                        indivíduos comprometidos
+                        para enfrentar os desafios ambientais com uma abordagem integrada e coletiva.
+                    </p>
+
+                    <h3 class="text-center">Seja um Voluntário</h3>
+                    <p class="text-center">
+                        Na Green Earth, acreditamos que cada pessoa pode fazer a diferença. Se você compartilha de
+                        nossos valores e está
+                        comprometido em proteger nosso planeta, convidamos você a se juntar a nós nessa jornada
+                        transformadora. Juntos, podemos
+                        preservar a Amazônia para as gerações futuras e construir um futuro mais sustentável para todos.
+                    </p>
+
+                    <p class="text-center">
+                        Junte-se à Green Earth hoje e seja parte da mudança que desejamos ver no mundo!
+                    </p>
+
+                    <p class="text-center italic">Faça parte da Green Earth e seja a mudança que queremos ver no
+                        mundo!
+                        Entre em
+                        contato conosco
+                        para saber como você pode
+                        ajudar e apoiar nossos projetos ambientais.</p>
+
+                    <div class="d-flex">
+                        <a class="mx-auto " href="">Seja um voluntário</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
