--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Carter+One&family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -41,10 +41,10 @@
                                         class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item mx-5">
-                                <a class="nav-link change text-white " href="#">Sinup</a>
+                                <a class="nav-link change text-white " href="/pages/signup.html">Sinup</a>
                             </li>
                             <li class="nav-item mx-5">
-                                <a class="nav-link change text-white " href="#">Signin</a>
+                                <a class="nav-link change text-white " href="/pages/signin.html">Signin</a>
                             </li>
                             <li class="pointer nav-item mx-5 button-apoie">
                                 <a class="nav-link text-white  " href="#">
